Update Java project for K8s. Removing some AWS related information.